# chess-ai

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: Rust-CI.yml
src/: main.rs
src/chess/: board.rs  change.rs  colors.rs  mod.rs  piece.rs  pieces.rs  player.rs
